--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,10 @@ seaborn = "*"
 sdv = "*"
 scikit-learn = "*"
 recordlinkage = "*"
+nbformat = "==4.2.0"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
